--- a/js-app/app/sass/_office_game.sass
+++ b/js-app/app/sass/_office_game.sass
@@ -1,6 +1,39 @@
-.shelf1
+.shelf
     position: absolute
     width: 46%
     height: 25%
-    top: 10%
     left: 5.75%
+    margin-top: 0.6em
+
+.shelf0
+    top: 10%
+
+.shelf1
+    top: 38%
+
+.shelf2
+    top: 66%
+
+.shelf3
+    top: 94%
+
+.drag_container
+    position: absolute
+    width: 30%
+    height: 70%
+    left: 55%
+    top: 15%
+    padding: 2.5%
+    border-radius: 10%
+    background: rgba(0,0,0,.25)
+
+.folder_space,
+.folder
+    display: inline-block
+    height: 24.1em
+    width: 8.15em
+
+.folder
+    background-image: url(img/folder_sprite.png)
+    background-repeat: no-repeat
+    background-size: 1070%
