--- a/js-app/app/sass/_office_game.sass
+++ b/js-app/app/sass/_office_game.sass
@@ -17,15 +17,35 @@
 .shelf3
     top: 94%
 
-.drag_container
+.message_box
+    background: rgba(0,0,0,.25)
+    position: absolute
+    left: 55%
+    top: 5%
+    width: 32%
+    height: 10%
+    padding: 1.5%
+    font-size: 4em
+    font-family: sans-serif
+    text-align: center
+    display: none
+
+.message_box.active
+    display: initial
+
+.drag_shadow
     position: absolute
     width: 30%
-    height: 70%
+    height: 60%
     left: 55%
-    top: 15%
+    top: 25%
     padding: 2.5%
     border-radius: 10%
     background: rgba(0,0,0,.25)
+
+.drag_container
+    width: 100%
+    height: 100%
 
 .folder_space,
 .folder
@@ -37,3 +57,9 @@
     background-image: url(img/folder_sprite.png)
     background-repeat: no-repeat
     background-size: 1070%
+
+.drag_container .draggable_folder
+    margin: 4% 2%
+
+.drop-target
+    background-color: rgba(255,255,255,.5)
