Removed unneccessary ids from dom elements

--- a/js-app/app/sass/_main.sass
+++ b/js-app/app/sass/_main.sass
@@ -5,12 +5,12 @@ body
     margin: 0
     background: black
 
-#app
+.app
     position: relative
     background: darkgray
     overflow: hidden
 
-#hud
+.hud
     position: absolute
     right: 0
     height: 100%
@@ -43,7 +43,7 @@ body
 .bag_item
     width: 80%
 
-#scene
+.scene
     position: absolute
     height: 100%
     width: 100%
