Added cursors to hud and draggable office_game folders

--- a/js-app/app/sass/_main.sass
+++ b/js-app/app/sass/_main.sass
@@ -21,6 +21,7 @@ body
 .hud_mainmenu
     width: 100%
     border-bottom-left-radius: 85%
+    cursor: pointer
 
 .hud_bag_button
     position: relative
@@ -42,6 +43,7 @@ body
 
 .bag_item
     width: 80%
+    cursor: pointer
 
 .scene
     position: absolute
