--- a/js-app/app/sass/_office_game.sass
+++ b/js-app/app/sass/_office_game.sass
@@ -58,6 +58,9 @@
     background-repeat: no-repeat
     background-size: 1070%
 
+.draggable_folder
+    cursor: grab
+
 .drag_container .draggable_folder
     margin: 4% 2%
 
