--- a/js-app/app/sass/_main.sass
+++ b/js-app/app/sass/_main.sass
@@ -1,8 +1,10 @@
-html, body
+html
     height: 100%
 
 body
+    height: 100%
     margin: 0
+    font-family: sans-serif
     background: black
 
 .app
