main_menu as entrypoint again; added egg_game link there

--- a/js-app/app/sass/_main_menu.sass
+++ b/js-app/app/sass/_main_menu.sass
@@ -1,8 +1,7 @@
 .menu_button
-    position: absolute
-    left: 5%
-    top: 5%
+    margin: 2%
     padding: 2%
+    width: 20%
     background: yellow
     font-size: 4em
     cursor: pointer
