--- a/js-app/app/sass/_main.sass
+++ b/js-app/app/sass/_main.sass
@@ -6,6 +6,12 @@ body
     margin: 0
     font-family: sans-serif
     background: black
+    -webkit-touch-callout: none
+    -webkit-user-select: none
+    -khtml-user-select: none
+    -moz-user-select: none
+    -ms-user-select: none
+    user-select: none
 
 .app
     position: relative
