Scoped css scenes

--- a/js-app/app/app.sass
+++ b/js-app/app/app.sass
@@ -1,4 +1,10 @@
 @import sass/_main
-@import sass/_main_menu
-@import sass/_office_game
-@import sass/_egg_game
+
+.main_menu
+    @import sass/_main_menu
+
+.office_game
+    @import sass/_office_game
+
+.egg_game
+    @import sass/_egg_game
