Finished egg_game

--- a/js-app/app/sass/_egg_game.sass
+++ b/js-app/app/sass/_egg_game.sass
@@ -1,3 +1,17 @@
+.message_box
+    position: absolute
+    left: 30%
+    width: 40%
+    top: 4%
+    padding: 1%
+    font-size: 4em
+    text-align: center
+    background: rgba(0,0,0,.25)
+    display: none
+
+.message_box.active
+    display: block
+
 .egg_box
     position: absolute
     top: 18%
