--- a/js-app/app/app.sass
+++ b/js-app/app/app.sass
@@ -3,6 +3,9 @@
 .main_menu
     @import sass/_main_menu
 
+.treehouse_game
+    @import sass/_treehouse_game
+
 .office_game
     @import sass/_office_game
 
