Optimized nail shape with border-radiuses

--- a/js-app/app/sass/_treehouse_game.sass
+++ b/js-app/app/sass/_treehouse_game.sass
@@ -39,9 +39,13 @@
     position: absolute
     height: 23vh
     width: 15vh
-    background: url(img/nail.png)
+    background-image: url(img/nail.png)
+    background-repeat: no-repeat
     background-size: contain
     z-index: 1
+    border-top-right-radius: 50% 25%
+    border-top-left-radius: 100% 125%
+    border-bottom-right-radius: 200% 150%
 
 .sink
     position: absolute
