First draft of shop_game

--- a/js-app/app/app.sass
+++ b/js-app/app/app.sass
@@ -6,6 +6,9 @@
 .treehouse_game
     @import sass/_treehouse_game
 
+.shop_game
+    @import sass/_shop_game
+
 .office_game
     @import sass/_office_game
 
