Fixed css-vh-size bug

--- a/app/sass/_shop_game.sass
+++ b/app/sass/_shop_game.sass
@@ -34,15 +34,15 @@
     height: 75%
     width: 80%
     box-sizing: border-box
-    border-bottom: 5vh solid blue
+    border-bottom: 5em solid blue
 
 .needle
     position: absolute
     left: 49%
-    transform: translate(-1vh, 0)
-    border-left: 2vh solid transparent
-    border-right: 2vh solid transparent
-    border-bottom: 20vh solid green
+    transform: translate(-1em, 0)
+    border-left: 2em solid transparent
+    border-right: 2em solid transparent
+    border-bottom: 20em solid green
     border-top: none
     box-sizing: border-box
 
@@ -51,51 +51,51 @@
     top: 30%
     width: 47%
     height: 45%
-    border-bottom: 5vh solid yellow
+    border-bottom: 5em solid yellow
     box-sizing: border-box
 
 .dish .item
     position: absolute
-    height: 8vh
-    width: 12vh
+    height: 8em
+    width: 12em
 
     &:nth-child(1)
         bottom: 0
-        left: 0.75vh
+        left: 0.75em
     &:nth-child(2)
         bottom: 0
-        left: 14.25vh
+        left: 14.25em
     &:nth-child(3)
         bottom: 0
-        left: 27.75vh
+        left: 27.75em
     &:nth-child(4)
         bottom: 0
-        left: 41.25vh
+        left: 41.25em
     &:nth-child(5)
-        bottom: 8vh
-        left: 7.5vh
+        bottom: 8em
+        left: 7.5em
     &:nth-child(6)
-        bottom: 8vh
-        left: 21vh
+        bottom: 8em
+        left: 21em
     &:nth-child(7)
-        bottom: 8vh
-        left: 34.5vh
+        bottom: 8em
+        left: 34.5em
     &:nth-child(8)
-        bottom: 16vh
-        left: 14.25vh
+        bottom: 16em
+        left: 14.25em
     &:nth-child(9)
-        bottom: 16vh
-        left: 27.75vh
+        bottom: 16em
+        left: 27.75em
     &:nth-child(10)
-        bottom: 24vh
-        left: 21vh
+        bottom: 24em
+        left: 21em
 
     &:nth-child(n+11)
         display: none
 
 .dish .item_apple
-    width: 10vh
-    height: 10vh
+    width: 10em
+    height: 10em
 
 .drop-target
     background: rgba(0,0,255,.1)
@@ -116,22 +116,22 @@
 
 .item_milk
     background: white
-    border: 3px solid black
-    width: 15vh
-    height: 10vh
+    border: .5em solid black
+    width: 15em
+    height: 10em
 
 .item_apple
     background: red
-    border: 3px solid black
+    border: .5em solid black
     border-radius: 100%
-    width: 10vh
-    height: 10vh
+    width: 10em
+    height: 10em
 
 .item_butter
     background: yellow
-    border: 3px solid black
-    width: 15vh
-    height: 10vh
+    border: .5em solid black
+    width: 15em
+    height: 10em
 
 .finish_button
     position: absolute
