--- a/app/sass/_treehouse_game.sass
+++ b/app/sass/_treehouse_game.sass
@@ -37,8 +37,8 @@
 
 .nail
     position: absolute
-    height: 23vh
-    width: 15vh
+    height: 23em
+    width: 15em
     background-image: url(img/nail.png)
     background-repeat: no-repeat
     background-size: contain
