Initial version of EmilScene

--- a/app/app.sass
+++ b/app/app.sass
@@ -1,7 +1,11 @@
+@import sass/_mixins
 @import sass/_main
 
 .main_menu
     @import sass/_main_menu
+
+.emil
+    @import sass/_emil
 
 .treehouse_game
     @import sass/_treehouse_game
