Added placeholders to main menu

--- a/app/sass/_main_menu.sass
+++ b/app/sass/_main_menu.sass
@@ -5,3 +5,13 @@
     background: yellow
     font-size: 4em
     cursor: pointer
+    float: left
+
+.button_placeholder
+    margin: 2%
+    padding: 2%
+    width: 20%
+    background: gray
+    font-size: 4em
+    cursor: pointer
+    float: left
