--- a/app/sass/_emma.sass
+++ b/app/sass/_emma.sass
@@ -21,7 +21,7 @@ $dialog_bubble_bg: rgba(0,0,0,.75)
 .dialog_bubble_visible
     display: block
 
-.dialog_bubble_emil
+.dialog_bubble_emma
     color: lightgreen
 
     &:after
