--- a/app/app.sass
+++ b/app/app.sass
@@ -10,14 +10,17 @@
 .emil
     @import sass/_emil
 
-.emma
-    @import sass/_emma
-
 .treehouse_game
     @import sass/_treehouse_game
 
+.emma
+    @import sass/_emma
+
 .shop_game
     @import sass/_shop_game
+
+.papa
+    @import sass/_papa
 
 .office_game
     @import sass/_office_game
