--- a/app/sass/_main_menu.sass
+++ b/app/sass/_main_menu.sass
@@ -1,17 +1,22 @@
-.menu_button
+.section
+    margin: 5% 10%
+
+.heading
+    font-size: 8em
+    margin-left: 5%
+
+.heading_games
+    top: 40%
+
+.btn
+    position: relative
+    display: inline-block
     margin: 2%
     padding: 2%
-    width: 20%
+    width: 30%
     background: yellow
     font-size: 4em
     cursor: pointer
-    float: left
 
 .button_placeholder
-    margin: 2%
-    padding: 2%
-    width: 20%
     background: gray
-    font-size: 4em
-    cursor: pointer
-    float: left
