--- a/app/sass/_main.sass
+++ b/app/sass/_main.sass
@@ -54,6 +54,9 @@ body
     width: 80%
     cursor: pointer
 
+.bag_item_hidden
+    display: none
+
 .scene
     position: absolute
     height: 100%
