Bugfix: better speech bubble arrow positioning

--- a/app/sass/_karl.sass
+++ b/app/sass/_karl.sass
@@ -28,7 +28,7 @@ $dialog_bubble_bg: rgba(0,0,0,.75)
     color: lightgreen
 
     &:after
-        top: -1.9em
+        bottom: 100%
         left: 60%
         @include triangle(-1em, 1em, 1em, -1em, $dialog_bubble_bg)
 
@@ -37,6 +37,6 @@ $dialog_bubble_bg: rgba(0,0,0,.75)
 
     &:after
         top: 25%
-        left: -2.8em
+        right: 100%
         @include triangle(1em, 1.5em, -1em, -1.5em, $dialog_bubble_bg)
 
