--- a/app/sass/_papa.sass
+++ b/app/sass/_papa.sass
@@ -28,7 +28,7 @@ $dialog_bubble_bg: rgba(0,0,0,.75)
     color: lightgreen
 
     &:after
-        top: -2.9em
+        bottom: 100%
         left: 15%
         @include triangle(-1.5em, -1em, 1.5em, 1em, $dialog_bubble_bg)
 
