--- a/app/sass/_preface.sass
+++ b/app/sass/_preface.sass
@@ -37,6 +37,6 @@ $dialog_bubble_bg: rgba(0,0,0,.75)
 
     &:after
         top: 70%
-        left: -2.4em
+        right: 100%
         @include triangle(-0, -0, 1.5em, -2.5em, $dialog_bubble_bg)
 
